Updated JAR running documentation
Added MacOS / Linux commands